// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.js should render a <button> tag when using to prop 1`] = `

<button class="btn btn--router"
        data-ripple="true"
>
</button>

`;

exports[`VBtn.js should render an <a> tag when using href prop 1`] = `

<a href="http://www.google.com"
   class="btn"
   data-ripple="true"
>
  <div class="btn__content">
  </div>
</a>

`;

exports[`VBtn.js should render component and match snapshot 1`] = `

<button type="button"
        class="btn"
        data-ripple="true"
>
  <div class="btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render specified tag when using tag prop 1`] = `

<a class="btn"
   data-ripple="true"
>
  <div class="btn__content">
  </div>
</a>

`;
